--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Insta Post Feed Project</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" />
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
         <nav class="navbar bg-body-tertiary">
@@ -15,8 +15,7 @@
                     <i class="fa-brands fa-instagram"></i>
                     <span class="navbar-brand mb-0 h1">Instagram</span>
                 </a>
-         <!-- PLACE BELOW BUTTON TO HUG RIGHT -->
-                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#newPostModal">Create a new post</button>
+                <button type="button" class="btn btn-success ms-auto me-2" data-bs-toggle="modal" data-bs-target="#newPostModal">Create a new post</button>
                 <div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="newPostModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -28,13 +27,10 @@
                             <form>
                             <div class="mb-3">
                                 <label for="caption-text" class="col-form-label fw-medium">Caption:</label>
-                                <textarea class="form-control" id="caption-text">
-         <!-- ADD PLACEHOLDER TEXT: "Add the caption of your post here"-->
-                                </textarea>
+                                <textarea class="form-control" id="caption-text" placeholder="Add the caption of your post here"></textarea>                      
                                 <div>
-        <!-- BUTTON SIZE, LIGHTER BORDER/LIGHT GREY BG, CORRECT SPACING -->
-                                    <button type="button" class="btn btn-outline-secondary mt-2"><i class="fa-solid fa-camera" style="color:#000000;"></i></button>
-                                    <button type="button" class="btn btn-secondary mt-2"><i class="fa-solid fa-location-dot" style="color: #000000;"></i></button>
+                                    <button type="button" class="btn btn-outline-secondary mt-3 me-1 btn-style"><i class="fa-solid fa-camera" style="color:#000000;"></i></button>
+                                    <button type="button" class="btn btn-outline-secondary mt-3 btn-style"><i class="fa-solid fa-location-dot" style="color: #000000;"></i></button>
                                 </div>
                             </div>
                             </form>
@@ -51,15 +47,30 @@
                         <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li><a class="dropdown-item" href="#">Accessibility</a></li>
-                    <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item text-danger" href="#">Log Out</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Accessibility</a></li>
+                        <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item text-danger" href="#">Log Out</a></li>
                     </ul>
                 </div>
             </div>
         </nav> 
+        <!-- INSTAGRAM POSTS HERE -->
+        <section class="page-body">
+            <ul class="nav nav-pills justify-content-center mb-3 pt-2" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true"><i class="fa-solid fa-table-cells"></i></button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><i class="fa-solid fa-square"></i></button>
+                </li>
+              </ul>
+              <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+              </div>
+        </section>
         <!-- INSTAGRAM POSTS HERE -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
