--- a/index.html
+++ b/index.html
@@ -1,77 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Insta Post Feed Project</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" />
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    <body>
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                    <span class="navbar-brand mb-0 h1">Instagram</span>
-                </a>
-                <button type="button" class="btn btn-success ms-auto me-2" data-bs-toggle="modal" data-bs-target="#newPostModal">Create a new post</button>
-                <div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="newPostModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="newPostModalLabel">Create a new post</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                            <div class="mb-3">
-                                <label for="caption-text" class="col-form-label fw-medium">Caption:</label>
-                                <textarea class="form-control" id="caption-text" placeholder="Add the caption of your post here"></textarea>                      
-                                <div>
-                                    <button type="button" class="btn btn-outline-secondary mt-3 me-1 btn-style"><i class="fa-solid fa-camera" style="color:#000000;"></i></button>
-                                    <button type="button" class="btn btn-outline-secondary mt-3 btn-style"><i class="fa-solid fa-location-dot" style="color: #000000;"></i></button>
-                                </div>
-                            </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-success">Publish</button>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Insta Post Feed Project</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
+  <body>
+    <!-- top nav bar -->
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <i class="fa-brands fa-instagram"></i>
+          <span class="navbar-brand mb-0 h1">Instagram</span>
+        </a>
+        <!-- create a new post button -->
+        <button type="button" class="btn btn-success ms-auto me-2" data-bs-toggle="modal" data-bs-target="#newPostModal">Create a new post</button>
+          <div class="modal fade" id="newPostModal" tabindex="-1" aria-labelledby="newPostModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="newPostModalLabel">Create a new post</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="mb-3">
+                      <label for="caption-text" class="col-form-label fw-medium">Caption:</label>
+                      <textarea class="form-control" id="caption-text" placeholder="Add the caption of your post here"></textarea>                      
+                        <div>
+                          <button type="button" class="btn btn-sm bg-light border col-1 mt-3 me-1"><i class="fa-solid fa-camera" style="color:#000000;"></i></button>
+                          <button type="button" class="btn btn-sm bg-light border col-1 mt-3"><i class="fa-solid fa-location-dot" style="color: #000000;"></i></button>
                         </div>
                     </div>
+                  </form>
                 </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-success">Publish</button>
                 </div>
-                <div class="btn-group">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><a class="dropdown-item" href="#">Accessibility</a></li>
-                        <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item text-danger" href="#">Log Out</a></li>
-                    </ul>
-                </div>
+              </div>
             </div>
-        </nav> 
-        <!-- INSTAGRAM POSTS HERE -->
-        <section class="page-body">
-            <ul class="nav nav-pills justify-content-center mb-3 pt-2" id="pills-tab" role="tablist">
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true"><i class="fa-solid fa-table-cells"></i></button>
+          </div>
+        <!-- settings button -->
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-gear" style="color: #ffffff;"></i>
+          </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="#">Accessibility</a></li>
+              <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item text-danger" href="#">Log Out</a></li>
+            </ul>
+        </div>
+      </div>
+    </nav> 
+    <section class="page-body">
+      <!-- instagram-style layout toggle buttons -->
+      <ul class="nav nav-pills justify-content-center mb-3 pt-2" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true"><i class="fa-solid fa-table-cells"></i></button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><i class="fa-solid fa-square"></i></button>
+        </li>
+      </ul>
+      <div class="tab-content" id="pills-tabContent">
+        <!--grid layout -->
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+          <div class="container mb-0 pb-0">
+            <div class="row row-cols-3">
+              <div class="col m-0 p-1"><img src="https://placebear.com/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://placekitten.com/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://loremflickr.com/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://picsum.photos/id/237/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://picsum.photos/id/238/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://picsum.photos/id/239/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://picsum.photos/id/240/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://picsum.photos/id/287/500/400" class="img-fluid"></div>
+              <div class="col m-0 p-1"><img src="https://picsum.photos/id/236/500/400" class="img-fluid"></div>
+            </div>
+          </div>
+        </div>
+        <!-- post layout -->        
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+          <div class=" container d-none d-md-flex flex-column align-items-center">
+            <div class="card w-50 m-3" id="UnPost"> 
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item clearfix pb-0 mb-0">
+                  <p class="float-start h5">Bears in Nature</p><p class="float-end">04/01</p>
                 </li>
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><i class="fa-solid fa-square"></i></button>
+                <li class="list-group-item p-0"><img class="card-img" src="https://placebear.com/300/200"></li>
+                <li class="list-group-item">
+                  <p class="h6">369 Likes</p>
+                  <p class="mt-1">I like using "placebear.com" for bear placeholder pictures. I grew up in Montana so I think bears are pretty cool.</p>
                 </li>
               </ul>
-              <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
-              </div>
-        </section>
-        <!-- INSTAGRAM POSTS HERE -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </body>
+            </div>
+            <div class="card w-50 m-3" id="UnPost"> 
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item clearfix pb-0 mb-0">
+                  <p class="float-start h5">Kitty Picture!</p><p class="float-end">11/05</p>
+                </li>
+                <li class="list-group-item p-0"><img class="card-img" src="https://placekitten.com/300/200"></li>
+                <li class="list-group-item">
+                  <p class="h6">1001 Likes</p>
+                  <p class="mt-1">Who doesn't like pictures of kittens? Use "placekitten.com" for kitten placeholder pictures.</p>
+                </li>
+              </ul>
+            </div>
+            <div class="card w-50 m-3" id="UnPost"> 
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item clearfix pb-0 mb-0">
+                  <p class="float-start h5">Random Pictures for Fun!</p><p class="float-end">12/12</p>
+                </li>
+                <li class="list-group-item p-0"><img class="card-img" src="https://loremflickr.com/300/200"></li>
+                <li class="list-group-item">
+                  <p class="h6">2313 Likes</p>
+                  <p class="mt-1">This placeholder site, "loremflickr.com", gives me random pictures each time the website is reloaded. Keeping it fresh!</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
 </html>
